modified work history to reflect current

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     </div>
                     <h1>Software Development</h1>
                     <p>
-                        Utilizing skills for conceigotving, specifying, designing, programming, documenting, testing, and bug fixing for creating and maintaining applications
+                        Utilizing skills for conceiving, specifying, designing, programming, documenting, testing, and bug fixing for creating and maintaining applications
                     </p>
                 </div>
                 <div class="skill" data-aos="flip-left" data-aos-delay="900">
@@ -296,124 +296,6 @@
                     <a href="https://github.com/kylecox213/bigKahunaBurger.git" class="cta">View Details</a>
                 </div>
             </div>
-            <!-- 
-            <div class="portfolio-item">
-                <div class="portfolio-description description-float-left" data-aos="fade-right" data-aos-delay="100">
-                    <h6>Web Applications</h6>
-                    <h1>Crystal Collector</h1>
-                    <p>
-                        Four crystals! Each crystal has a value. In this game, it is up to you to figure out what they are worth. But don't let the sum of the crystal's values exceed the number above or....GAME OVER
-                    </p>
-                    <a href="https://github.com/kylecox213/unit-4-game" class="cta">View Details</a>
-                </div>
-                <div class="portfolio-img img-float-right" data-aos="fade-left" data-aos-delay="100">
-                    <a href="https://kylecox213.github.io/unit-4-game/">
-                        <img src="assets/images/crystalgame.png" alt="crystal" style="float: right"></a>
-                </div>
-            </div>
-
-            <div class="portfolio-item">
-                <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="100">
-                    <a href="https://kylecox213.github.io/Trivia-Game/">
-                        <img src="assets/images/triviagame.png" alt="trivia"></a>
-                </div>
-                <div class="portfolio-description description-float-left" data-aos="fade-left" data-aos-delay="100">
-                    <h6>Web Applications</h6>
-                    <h1>Trivia Game</h1>
-                    <p>
-                        A Breaking Bad Trivia Game! There are ten, time-sensitive questions that are not easy to answer. Only true fanatics of the show will be able to pass.
-                    </p>
-                    <a href="https://github.com/kylecox213/Trivia-Game" class="cta">View Details</a>
-                </div>
-            </div>
-            <div class="portfolio-item">
-                <div class="portfolio-description description-float-left" data-aos="fade-right" data-aos-delay="100">
-                    <h6>Web Applications</h6>
-                    <h1>Nintendo Giphy</h1>
-                    <p>
-                        An application that brings the user a series of nintendo related giphs rendered on the page. Simply enter a game title and.....viola!
-                    </p>
-                    <a href="https://github.com/kylecox213/GIPHY-API" class="cta">View Details</a>
-                </div>
-                <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="100">
-                    <a href="https://kylecox213.github.io/GIPHY-API/?">
-                        <img src="assets/images/nintendoapp.png" alt="giph" style="float: right"></a>
-                </div>
-            </div>
-            <div class="portfolio-item">
-                <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="100">
-                    <a href="https://kylecox213.github.io/Psychic-Game/">
-                        <img src="assets/images/psygame (1).png" alt="psychic"></a>
-                </div>
-                <div class="portfolio-description description-float-left" data-aos="fade-left" data-aos-delay="100">
-                    <h6>Web Applications</h6>
-                    <h1>Psychic Game</h1>
-                    <p>
-                        The computer guesses a letter. You don't know what it is. In this fun game, you have ten chances to get it right. If your guesses run out....Guess What? GAMEOVER!
-                    </p>
-                    <a href="https://github.com/kylecox213/Psychic-Game" class="cta">View Details</a>
-                </div>
-            </div>
-            <div class="portfolio-item">
-                <div class="portfolio-description description-float-left" data-aos="fade-right" data-aos-delay="100">
-                    <h6>Web Applications</h6>
-                    <h1>Guess A Number</h1>
-                    <p>
-                        Guess a number! Any number! Any number between one through thirty! You have seven shots to get it in this game.
-                    </p>
-                    <a href="https://github.com/kylecox213/Number-Guess-Game" class="cta">View Details</a>
-                </div>
-                <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="100">
-                    <a href="https://kylecox213.github.io/Number-Guess-Game/">
-                        <img src="assets/images/numbergame.png" alt="number" style="float: right"></a>
-                </div>
-            </div>
-            <div class="portfolio-item">
-                <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="100">
-                    <a href="https://kylecox213.github.io/Train-Scheduler/">
-                        <img src="assets/images/traingame.png" alt="train"></a>
-                </div>
-                <div class="portfolio-description" data-aos="fade-left" data-aos-delay="100">
-                    <h6>Web Applications</h6>
-                    <h1>Train Schedule Management System (TSMS)</h1>
-                    <p>
-                        A web form application designed to manage the time schedule of each train entered into the management system. (TSMS) provides users with the ability to add a new train and set the train schedule properties. For each train entered into the system, (TSMS)
-                        is designed to update the next scheduled arrival and display the minutes remaining until the next arrival.
-                    </p>
-                    <a href="https://github.com/kylecox213/Train-Scheduler" class="cta">View Details</a>
-                </div>
-            </div>
-
-            <br>
-
-            <div class="portfolio-item">
-                <div class="portfolio-description has-margin-right" data-aos="fade-right" data-aos-delay="100">
-                    <h6>Web Design</h6>
-                    <h1>Product Layout</h1>
-                    <p>
-                        The initial student-portfolio webpage design. The webpage design utilized wireframing schemes and various bootstrap classes and styling properties.
-                    </p>
-                    <a href="https://github.com/kylecox213/Bootstrap-Portfolio" class="cta">View Details</a>
-                </div>
-                <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="100">
-                    <a href="https://kylecox213.github.io/Bootstrap-Portfolio/">
-                        <img src="assets/images/bootstrap.png" alt="bootstrap" style="float: right"></a>
-                </div>
-            </div>
-            <div class="portfolio-item">
-                <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="100">
-                    <img src="assets/images/gearscog.jpg" alt="gears">
-                </div>
-                <div class="portfolio-description" data-aos="fade-left" data-aos-delay="100">
-                    <h6>Software Development</h6>
-                    <h1>COG Systems LLC.</h1>
-                    <p>
-                        Product design page is currently under construction!
-                    </p>
-                    <a href="" class="cta">View Details</a>
-                </div>
-            </div>
-    </section> -->
         </div>
     </section>
 
@@ -426,24 +308,30 @@
             </div>
             <div class="timeline" data-aos="fade-down" data-aos-delay="300">
                 <ul>
-                    <li class="date" data-date="Dec 18 - Present">
-                        <h1>COG Systems LLC</h1>
+                    <li class="date" data-date="Feb 20 - Present">
+                        <h1>International Roll-Call Corporation</h1>
                         <p>
-                            Software & Web Developer
+                            Senior Software Engineer
                         </p>
                     </li>
-                    <li class="date" data-date="Oct 18 - Jun 19">
+                    <li class="date" data-date="Nov 19 - Jan 20">
+                        <h1>Mapcom Systems</h1>
+                        <p>
+                            Junior Software Engineer
+                        </p>
+                    </li>
+                    <li class="date" data-date="Dec 18 - Present">
+                        <h1>COG Systems</h1>
+                        <p>
+                            Freelance Software & Web Developer
+                        </p>
+                    </li>
+                    <li class="date" data-date="Oct 18 - Aug 19">
                         <h1>Logistics Solutions Group</h1>
                         <p>
                             Junior Software Developer | Business Analyst
                         </p>
                     </li>
-                    <!-- <li class="date" data-date="Jun 06 - Apr 19">
-                                <h1>Dog Den Inc.</h1>
-                                <p>
-                                    General Manager
-                                </p>
-                            </li> -->
                 </ul>
             </div>
         </div>
