modified work history to reflect current

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
                     <li><a href="" class="#05ff11">Angular</a></li>
                     <li><a href="" class="#05ff11">Typescript</a></li>
                     <li><a href="" class="#05ff11">C++</a></li>
-                    <li><a href="" class="#05ff11">Microsoft Azure</a></li>
+                    <li><a href="" class="#05ff11">Azure DevOps</a></li>
                     <li><a href="" class="#05ff11">VB.NET</a></li>
-                    <li><a href="" class="#05ff11"></a></li>
+                    <li><a href="" class="#05ff11">RegEx</a></li>
                     <li><a href="" class="#05ff11">Grunt</a></li>
                     <li><a href="" class="#05ff11">.NET Framework</a></li>
                     <li><a href="" class="#05ff11">Atom</a></li>
@@ -119,34 +119,16 @@
                     <li><a href="" class="#05ff11">Telerik</a></li>
                     <li><a href="" class="#05ff11">Razor Pages</a></li>
                     <li><a href="" class="#05ff11">NGiNX</a></li>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+                    <li><a href="" class="#05ff11">Blazor</a></li>
+                    <li><a href="" class="#05ff11">Docker</a></li>
+                    <li><a href="" class="#05ff11">Kubernetes</a></li>
+                    <li><a href="" class="#05ff11">BDD</a></li>
+                    <li><a href="" class="#05ff11">RabbitMQ</a></li>
+                    <li><a href="" class="#05ff11">Bamboo</a></li>
+                    <li><a href="" class="#05ff11">DevExpress</a></li>
+                    <li><a href="" class="#05ff11">Jira</a></li>
+                    <li><a href="" class="#05ff11">Redis</a></li>
+                    <li><a href="" class="#05ff11">MVVM</a></li>
                 </ul>
             </canvas>
         </div>
