added the memory monster game to the portfolio

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <li><a href="" class="#05ff11">.NET Framework</a></li>
                     <li><a href="" class="#05ff11">Atom</a></li>
                     <li><a href="" class="#05ff11">Bit Bucket</a></li>
-                    <li><a href="" class="#05ff11">Git</a></li>
+                    <li><a href="" class="#05ff11"></a></li>
                     <li><a href="" class="#05ff11">Unity</a></li>
                     <li><a href="" class="#05ff11">Data Structures</a></li>
                     <li><a href="" class="#05ff11">Unit Testing</a></li>
@@ -129,6 +129,11 @@
                     <li><a href="" class="#05ff11">Jira</a></li>
                     <li><a href="" class="#05ff11">Redis</a></li>
                     <li><a href="" class="#05ff11">MVVM</a></li>
+                    <li><a href="" class="#05ff11">Swagger</a></li>
+                    <li><a href="" class="#05ff11">Gherkin</a></li>
+                    <li><a href="" class="#05ff11">Cucumber</a></li>
+                    <li><a href="" class="#05ff11">Selenium</a></li>
+                    <li><a href="" class="#05ff11">Test Automation</a></li>
                 </ul>
             </canvas>
         </div>
@@ -275,7 +280,23 @@
                         This application enables users to create a burger. Users will enter the name of their custom burger and click the 'create' button. The burger name will be rendered in the 'Concept Burgers' table accompanied by an 'order up' button. Clicking the 'order
                         up' button will remove the burger from the 'Concept Burgers' table and render to the 'Signature Burgers' table.
                     </p>
-                    <a href="https://github.com/kylecox213/bigKahunaBurger.git" class="cta">View Details</a>
+                    <a href="https://github.com/kylecox213/memory-monster.git" class="cta">View Details</a>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-img img-float-right" data-aos="fade-right" data-aos-delay="900">
+                    <a href="https://memory-monster.herokuapp.com">
+                        <img src="assets/images/kahuna.png" alt="screenshot"></a>
+                </div>
+                <div class="portfolio-description description-float-right" data-aos="fade-left" data-aos-delay="900">
+                    <h1>Memory Monster</h1>
+                    <p>
+                        This is a memory-matching game that renders eighteen monster cards. With each user click of a card, the cards will reshuffle
+                         and all eighteen cards will remain on the screen. If a card is clicked more than once the game will come to an end. A counter at the top of the screen
+                         tracks the number of cards correctly seleceted. 
+
+                    </p>
+                    <a href="https://github.com/kylecox213/memory-monster.git" class="cta">View Details</a>
                 </div>
             </div>
         </div>
@@ -295,7 +316,7 @@
                         <p>
                             Senior Software Engineer
                         </p>
-                    </li>
+                    </li>.
                     <li class="date" data-date="Nov 19 - Jan 20">
                         <h1>Mapcom Systems</h1>
                         <p>
