uploaded img for recently added project listing

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             <div class="portfolio-item">
                 <div class="portfolio-img img-float-right" data-aos="fade-right" data-aos-delay="900">
                     <a href="https://memory-monster.herokuapp.com">
-                        <img src="assets/images/kahuna.png" alt="screenshot"></a>
+                        <img src="assets/images/memoryMonst.png" alt="screenshot"></a>
                 </div>
                 <div class="portfolio-description description-float-right" data-aos="fade-left" data-aos-delay="900">
                     <h1>Memory Monster</h1>
